--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <meta name="author" content="Transparent Statistics in HCI Working Group (http://transparentstatistics.org/)">
 
 
-<meta name="date" content="2018-04-24">
+<meta name="date" content="2018-08-15">
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="apple-mobile-web-app-capable" content="yes">
@@ -33,7 +33,7 @@
   
   
 
-<link rel="next" href="transparent-statistics-guiding-principles.html">
+<link rel="next" href="principles.html">
 <script src="libs/jquery-2.2.3/jquery.min.js"></script>
 <link href="libs/gitbook-2.6.7/css/style.css" rel="stylesheet" />
 <link href="libs/gitbook-2.6.7/css/plugin-bookdown.css" rel="stylesheet" />
@@ -50,41 +50,69 @@
 
 
 <style type="text/css">
-div.sourceCode { overflow-x: auto; }
-table.sourceCode, tr.sourceCode, td.lineNumbers, td.sourceCode {
-  margin: 0; padding: 0; vertical-align: baseline; border: none; }
-table.sourceCode { width: 100%; line-height: 100%; }
-td.lineNumbers { text-align: right; padding-right: 4px; padding-left: 4px; color: #aaaaaa; border-right: 1px solid #aaaaaa; }
-td.sourceCode { padding-left: 5px; }
-code > span.kw { color: #007020; font-weight: bold; } /* Keyword */
-code > span.dt { color: #902000; } /* DataType */
-code > span.dv { color: #40a070; } /* DecVal */
-code > span.bn { color: #40a070; } /* BaseN */
-code > span.fl { color: #40a070; } /* Float */
-code > span.ch { color: #4070a0; } /* Char */
-code > span.st { color: #4070a0; } /* String */
-code > span.co { color: #60a0b0; font-style: italic; } /* Comment */
-code > span.ot { color: #007020; } /* Other */
-code > span.al { color: #ff0000; font-weight: bold; } /* Alert */
-code > span.fu { color: #06287e; } /* Function */
-code > span.er { color: #ff0000; font-weight: bold; } /* Error */
-code > span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
-code > span.cn { color: #880000; } /* Constant */
-code > span.sc { color: #4070a0; } /* SpecialChar */
-code > span.vs { color: #4070a0; } /* VerbatimString */
-code > span.ss { color: #bb6688; } /* SpecialString */
-code > span.im { } /* Import */
-code > span.va { color: #19177c; } /* Variable */
-code > span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
-code > span.op { color: #666666; } /* Operator */
-code > span.bu { } /* BuiltIn */
-code > span.ex { } /* Extension */
-code > span.pp { color: #bc7a00; } /* Preprocessor */
-code > span.at { color: #7d9029; } /* Attribute */
-code > span.do { color: #ba2121; font-style: italic; } /* Documentation */
-code > span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
-code > span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
-code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
+a.sourceLine { display: inline-block; line-height: 1.25; }
+a.sourceLine { pointer-events: none; color: inherit; text-decoration: inherit; }
+a.sourceLine:empty { height: 1.2em; position: absolute; }
+.sourceCode { overflow: visible; }
+code.sourceCode { white-space: pre; position: relative; }
+div.sourceCode { margin: 1em 0; }
+pre.sourceCode { margin: 0; }
+@media screen {
+div.sourceCode { overflow: auto; }
+}
+@media print {
+code.sourceCode { white-space: pre-wrap; }
+a.sourceLine { text-indent: -1em; padding-left: 1em; }
+}
+pre.numberSource a.sourceLine
+  { position: relative; }
+pre.numberSource a.sourceLine:empty
+  { position: absolute; }
+pre.numberSource a.sourceLine::before
+  { content: attr(data-line-number);
+    position: absolute; left: -5em; text-align: right; vertical-align: baseline;
+    border: none; pointer-events: all;
+    -webkit-touch-callout: none; -webkit-user-select: none;
+    -khtml-user-select: none; -moz-user-select: none;
+    -ms-user-select: none; user-select: none;
+    padding: 0 4px; width: 4em;
+    color: #aaaaaa;
+  }
+pre.numberSource { margin-left: 3em; border-left: 1px solid #aaaaaa;  padding-left: 4px; }
+div.sourceCode
+  {  }
+@media screen {
+a.sourceLine::before { text-decoration: underline; }
+}
+code span.al { color: #ff0000; font-weight: bold; } /* Alert */
+code span.an { color: #60a0b0; font-weight: bold; font-style: italic; } /* Annotation */
+code span.at { color: #7d9029; } /* Attribute */
+code span.bn { color: #40a070; } /* BaseN */
+code span.bu { } /* BuiltIn */
+code span.cf { color: #007020; font-weight: bold; } /* ControlFlow */
+code span.ch { color: #4070a0; } /* Char */
+code span.cn { color: #880000; } /* Constant */
+code span.co { color: #60a0b0; font-style: italic; } /* Comment */
+code span.cv { color: #60a0b0; font-weight: bold; font-style: italic; } /* CommentVar */
+code span.do { color: #ba2121; font-style: italic; } /* Documentation */
+code span.dt { color: #902000; } /* DataType */
+code span.dv { color: #40a070; } /* DecVal */
+code span.er { color: #ff0000; font-weight: bold; } /* Error */
+code span.ex { } /* Extension */
+code span.fl { color: #40a070; } /* Float */
+code span.fu { color: #06287e; } /* Function */
+code span.im { } /* Import */
+code span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Information */
+code span.kw { color: #007020; font-weight: bold; } /* Keyword */
+code span.op { color: #666666; } /* Operator */
+code span.ot { color: #007020; } /* Other */
+code span.pp { color: #bc7a00; } /* Preprocessor */
+code span.sc { color: #4070a0; } /* SpecialChar */
+code span.ss { color: #bb6688; } /* SpecialString */
+code span.st { color: #4070a0; } /* String */
+code span.va { color: #19177c; } /* Variable */
+code span.vs { color: #4070a0; } /* VerbatimString */
+code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warning */
 </style>
 
 <link rel="stylesheet" href="css/style.css" type="text/css" />
@@ -103,19 +131,25 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><a href="./index.html">Transparent Statistics Guidelines</a></li>
 
 <li class="divider"></li>
-<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Preface</a></li>
-<li class="chapter" data-level="1" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html"><i class="fa fa-check"></i><b>1</b> Transparent Statistics Guiding Principles</a><ul>
-<li class="chapter" data-level="1.1" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#introduction"><i class="fa fa-check"></i><b>1.1</b> Introduction</a></li>
-<li class="chapter" data-level="1.2" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#guiding-principles"><i class="fa fa-check"></i><b>1.2</b> Guiding Principles</a><ul>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#faithfulness"><i class="fa fa-check"></i>1. Faithfulness</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#robustness"><i class="fa fa-check"></i>2. Robustness</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#resilience"><i class="fa fa-check"></i>3. Resilience</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#process-transparency"><i class="fa fa-check"></i>4. Process Transparency</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#clarity"><i class="fa fa-check"></i>5. Clarity</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#simplicity"><i class="fa fa-check"></i>6. Simplicity</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#non-contingency"><i class="fa fa-check"></i>7. Non-contingency</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#precision-and-economy"><i class="fa fa-check"></i>8. Precision and economy</a></li>
-<li class="chapter" data-level="" data-path="transparent-statistics-guiding-principles.html"><a href="transparent-statistics-guiding-principles.html#material-availability"><i class="fa fa-check"></i>9. Material availability</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html"><i class="fa fa-check"></i>Preface</a><ul>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#organization"><i class="fa fa-check"></i>Organization</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#using"><i class="fa fa-check"></i>Using</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#versions"><i class="fa fa-check"></i>Versions</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#contributing"><i class="fa fa-check"></i>Contributing</a></li>
+</ul></li>
+<li class="chapter" data-level="1" data-path="principles.html"><a href="principles.html"><i class="fa fa-check"></i><b>1</b> Transparent Statistics Guiding Principles</a><ul>
+<li class="chapter" data-level="1.1" data-path="principles.html"><a href="principles.html#introduction"><i class="fa fa-check"></i><b>1.1</b> Introduction</a></li>
+<li class="chapter" data-level="1.2" data-path="principles.html"><a href="principles.html#guiding-principles"><i class="fa fa-check"></i><b>1.2</b> Guiding Principles</a><ul>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#faithfulness"><i class="fa fa-check"></i>1. Faithfulness</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#robustness"><i class="fa fa-check"></i>2. Robustness</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#resilience"><i class="fa fa-check"></i>3. Resilience</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#process-transparency"><i class="fa fa-check"></i>4. Process Transparency</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#clarity"><i class="fa fa-check"></i>5. Clarity</a></li>
+<li class="chapter" data-level="1.2.1" data-path="principles.html"><a href="principles.html#principles_simplicity"><i class="fa fa-check"></i><b>1.2.1</b> 6. Simplicity {-}</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#non-contingency"><i class="fa fa-check"></i>7. Non-contingency</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#precision-and-economy"><i class="fa fa-check"></i>8. Precision and economy</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#material-availability"><i class="fa fa-check"></i>9. Material availability</a></li>
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="2" data-path="effectsize.html"><a href="effectsize.html"><i class="fa fa-check"></i><b>2</b> Effect size</a><ul>
@@ -127,6 +161,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="2.1.5" data-path="effectsize.html"><a href="effectsize.html#effectsize_faq_simple_v_standardized"><i class="fa fa-check"></i><b>2.1.5</b> Should simple or standardized effect sizes be reported?</a></li>
 <li class="chapter" data-level="2.1.6" data-path="effectsize.html"><a href="effectsize.html#effectsize_faq_large_enough"><i class="fa fa-check"></i><b>2.1.6</b> How do I know my effect is large enough?</a></li>
 <li class="chapter" data-level="2.1.7" data-path="effectsize.html"><a href="effectsize.html#effectsize_faq_small_medium_large"><i class="fa fa-check"></i><b>2.1.7</b> What about Cohen’s small, medium, and large effect sizes?</a></li>
+<li class="chapter" data-level="2.1.8" data-path="effectsize.html"><a href="effectsize.html#how-to-use-effect-sizes-in-planning-a-study"><i class="fa fa-check"></i><b>2.1.8</b> How to use effect sizes in planning a study?</a></li>
+<li class="chapter" data-level="2.1.9" data-path="effectsize.html"><a href="effectsize.html#effectsize_faq_controversial"><i class="fa fa-check"></i><b>2.1.9</b> What are controversial issues about effect sizes?</a></li>
 </ul></li>
 <li class="chapter" data-level="2.2" data-path="effectsize.html"><a href="effectsize.html#effectsize_exemplar_simple"><i class="fa fa-check"></i><b>2.2</b> Exemplar: Simple effect size</a><ul>
 <li class="chapter" data-level="2.2.1" data-path="effectsize.html"><a href="effectsize.html#libraries-needed-for-this-analysis"><i class="fa fa-check"></i><b>2.2.1</b> Libraries needed for this analysis</a></li>
@@ -182,17 +218,48 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="header">
 <h1 class="title">Transparent Statistics Guidelines</h1>
 <h4 class="author"><em>Transparent Statistics in HCI Working Group (<a href="http://transparentstatistics.org/" class="uri">http://transparentstatistics.org/</a>)</em></h4>
-<h4 class="date"><em>2018-04-24</em></h4>
+<h4 class="date"><em>2018-08-15</em></h4>
 </div>
 <div id="preface" class="section level1 unnumbered">
 <h1>Preface</h1>
-<!-- TODO: consider content from https://docs.google.com/document/d/1HAZ3IzV8NDs87MfHxqpjPGgRIoH15Eop3hs57BIccJg -->
-<p>This document grew out of a Special Interest Group and Workshop to develop guidelines for transparent statistical communication in Human-Computer Interaction research.</p>
-<p>We welcome help and feedback at all levels! If you would like to contribute, please see <a href="https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines">Contributing to the Guidelines</a>.</p>
-<p>To refer to this specific version, use this DOI: <a href="https://doi.org/10.5281/zenodo.1228032">10.5281/zenodo.1228032</a>.</p>
-<p>To refer to all versions, use this DOI: <a href="https://doi.org/10.5281/zenodo.1186169">10.5281/zenodo.1186169</a>.</p>
-<p>For the most up-to-date version of the guideline, visit <a href="https://transparentstats.github.io/guidelines/">the online guideline page</a> or <a href="https://github.com/transparentstats/guidelines">source on Github</a>.</p>
+<p><a href="https://doi.org/10.5281/zenodo.1228032"><img src="https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1228032-green.svg" alt="DOI current version" /></a> <a href="https://doi.org/10.5281/zenodo.1186169"><img src="https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1186169-blue.svg" alt="DOI all versions" /></a></p>
+<p>This document grew out of a Special Interest Group and Workshop to develop guidelines for transparent statistical communication in Human-Computer Interaction research.
+The recommendations in this guideline are chosen to encourage transparency in the practice of statistics.
+For more details on this position, see our <a href="principles.html#principles">guiding principles</a>.</p>
+<div id="organization" class="section level2 unnumbered">
+<h2>Organization</h2>
+<p>This document is organized according to statistical topics.
+Each chapter splits into two sections: FAQ and Exemplars.
+The <strong>FAQ section</strong> lists questions that are relevant to transparency practice.
+We strive to allow random-access, to allow each reader to quickly find a compact answers to specific questions he/she has in mind.
+Thus, this guideline assumes some knowledge about the topic.
+We summarize such knowledge in earlier questions, but this is by no means exhaustive.
+Whenever you found yourself disoriented, it might be helpful to skim one or two earlier questions or lookup definitions of statistical terms over the internet.
+Whenever appropriate, we also point to other questions and parts of exemplars that are relevant.</p>
+<p>The <strong>Exemplars section</strong> supplements the FAQ by showing concrete cases in code and their interpretation(s).
+In contrast to the FAQ, the exemplars should be read top-to-bottom: the earlier examples are building blocks of the latter.</p>
+</div>
+<div id="using" class="section level2 unnumbered">
+<h2>Using</h2>
+<p>The text in this guideline is under CC-BY license, and the code is under MIT license.
+These license choices mean that you can use any code from this guideline in your analysis and can release your code (even under other licenses).</p>
+</div>
+<div id="limitations" class="section level2 unnumbered">
+<h2>Limitations</h2>
+<p>We focus on addressing issues that are commonly misunderstood and suboptimally practiced—intentionally or unintentionally.
+Therefore, the scope and focus of this document is far narrower than being a complete textbook in statistics.</p>
+</div>
+<div id="versions" class="section level2 unnumbered">
+<h2>Versions</h2>
+<p>As the consensus in statistical practice evolves (as science evolves), this document is a living document.
+For the most up-to-date version of the guideline, visit <a href="https://transparentstats.github.io/guidelines/">the online guideline page</a> or <a href="https://github.com/transparentstats/guidelines">source on Github</a>.</p>
+</div>
+<div id="contributing" class="section level2 unnumbered">
+<h2>Contributing</h2>
+<p>We welcome help and feedback at all levels! If you would like to contribute, please see
+<a href="https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines">Contributing to the Guidelines</a>.</p>
 
+</div>
 </div>
             </section>
 
@@ -200,7 +267,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
         </div>
       </div>
 
-<a href="transparent-statistics-guiding-principles.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
+<a href="principles.html" class="navigation navigation-next navigation-unique" aria-label="Next page"><i class="fa fa-angle-right"></i></a>
     </div>
   </div>
 <script src="libs/gitbook-2.6.7/js/app.min.js"></script>
@@ -246,7 +313,7 @@ gitbook.start({
   (function () {
     var script = document.createElement("script");
     script.type = "text/javascript";
-    var src = "";
+    var src = "true";
     if (src === "" || src === "true") src = "https://cdn.bootcss.com/mathjax/2.7.1/MathJax.js?config=TeX-MML-AM_CHTML";
     if (location.protocol !== "file:" && /^https?:/.test(src))
       src = src.replace(/^https?:/, '');
