--- a/index.html
+++ b/index.html
@@ -222,6 +222,7 @@ code span.wa { color: #60a0b0; font-weight: bold; font-style: italic; } /* Warni
 </div>
 <div id="preface" class="section level1 unnumbered">
 <h1>Preface</h1>
+<p><a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a></p>
 <p><a href="https://doi.org/10.5281/zenodo.1228032"><img src="https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1228032-green.svg" alt="DOI current version" /></a> <a href="https://doi.org/10.5281/zenodo.1186169"><img src="https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1186169-blue.svg" alt="DOI all versions" /></a></p>
 <p>This document grew out of a Special Interest Group and Workshop to develop guidelines for transparent statistical communication in Human-Computer Interaction research.
 The recommendations in this guideline are chosen to encourage transparency in the practice of statistics.
