--- a/principles.html
+++ b/principles.html
@@ -108,6 +108,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#using"><i class="fa fa-check"></i>Using</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#versions"><i class="fa fa-check"></i>Versions</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#citing"><i class="fa fa-check"></i>Citing</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#contributing"><i class="fa fa-check"></i>Contributing</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="principles.html"><a href="principles.html"><i class="fa fa-check"></i><b>1</b> Transparent Statistics Guiding Principles</a><ul>
@@ -118,7 +119,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#resilience"><i class="fa fa-check"></i>3. Resilience</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#process-transparency"><i class="fa fa-check"></i>4. Process Transparency</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#clarity"><i class="fa fa-check"></i>5. Clarity</a></li>
-<li class="chapter" data-level="1.2.1" data-path="principles.html"><a href="principles.html#principles_simplicity"><i class="fa fa-check"></i><b>1.2.1</b> 6. Simplicity {-}</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#principles_simplicity"><i class="fa fa-check"></i>6. Simplicity</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#non-contingency"><i class="fa fa-check"></i>7. Non-contingency</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#precision-and-economy"><i class="fa fa-check"></i>8. Precision and economy</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#material-availability"><i class="fa fa-check"></i>9. Material availability</a></li>
@@ -162,7 +163,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="pvalues.html"><a href="pvalues.html"><i class="fa fa-check"></i><b>3</b> p values</a></li>
-<li class="chapter" data-level="4" data-path="inferential.html"><a href="inferential.html"><i class="fa fa-check"></i><b>4</b> Inferential statistics</a></li>
+<li class="chapter" data-level="4" data-path="inference.html"><a href="inference.html"><i class="fa fa-check"></i><b>4</b> Inferential statistics</a></li>
 <li class="chapter" data-level="5" data-path="interpretations.html"><a href="interpretations.html"><i class="fa fa-check"></i><b>5</b> Interpretations and Conclusion</a></li>
 <li class="chapter" data-level="6" data-path="preregistration.html"><a href="preregistration.html"><i class="fa fa-check"></i><b>6</b> Preregistration and prespecification</a></li>
 <li class="chapter" data-level="7" data-path="multiplecomparisons.html"><a href="multiplecomparisons.html"><i class="fa fa-check"></i><b>7</b> Multiple comparisons</a></li>
@@ -201,10 +202,13 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="principles" class="section level1">
 <h1><span class="header-section-number">Chapter 1</span> Transparent Statistics Guiding Principles</h1>
 <p><a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a></p>
-<p><strong>Version:</strong> 1.0 <a href="https://doi.org/10.5281/zenodo.1344317"><img src="https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1344317-green.svg" alt="DOI current version" /></a> <a href="https://doi.org/10.5281/zenodo.1344316"><img src="https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1344316-blue.svg" alt="DOI all versions" /></a></p>
+<div class="preamble">
+<p><strong>Version:</strong> 1.0</p>
+<p><a href="https://doi.org/10.5281/zenodo.2226616"><img src="https://img.shields.io/badge/this%20version-10.5281%2Fzenodo.2226616-green.svg" alt="DOI this version" /></a> <a href="https://doi.org/10.5281/zenodo.1186169"><img src="https://img.shields.io/badge/all%20versions-10.5281%2Fzenodo.1186169-blue.svg" alt="DOI all versions" /></a> <a href="index.html#citing"><img src="https://img.shields.io/badge/-cite%20or%20contribute-lightgrey.svg" alt="Citing or contribute" /></a></p>
 <p><strong>Contributed to the writing:</strong> Pierre Dragicevic, Chat Wacharamanotham, Matthew Kay</p>
 <p><strong>Gave feedback:</strong></p>
 <p><strong>Endorsed:</strong></p>
+</div>
 <div id="introduction" class="section level2">
 <h2><span class="header-section-number">1.1</span> Introduction</h2>
 <p>Human-computer interaction (HCI) is a large, multidisciplinary field drawing on a variety of approaches for analyzing quantitative data. However, many of our existing practices have drawn increasing criticism, such as our overreliance on mechanical statistical testing procedures, our lack of replications and meta-analyses, and our unwillingness to share data and study materials. These issues have been discussed within HCI <span class="citation">(Wilson et al. <a href="#ref-Wilson2011">2011</a>; Kaptein and Robertson <a href="#ref-Kaptein2012">2012</a>; Dragicevic <a href="#ref-Dragicevic2016">2016</a>; Kay, Nelson, and Hekler <a href="#ref-Kay2016">2016</a>; Cockburn, Gutwin, and Dix <a href="#ref-Cockburn2018">2018</a>)</span> and (to a much larger extent) in other fields <span class="citation">(Cohen <a href="#ref-Cohen1994">1994</a>; Gigerenzer <a href="#ref-Gigerenzer2004">2004</a>; Ioannidis <a href="#ref-Ioannidis2005">2005</a>; Simmons, Nelson, and Simonsohn <a href="#ref-Simmons2011">2011</a>; Giner-Sorolla <a href="#ref-Giner2012">2012</a>; Cumming <a href="#ref-Cumming2014a">2014</a>; Nosek et al. <a href="#ref-Nosek2017">2017</a>)</span>. Poor statistical practice and the lack of transparency in statistical reporting hamper the progress of knowledge and undermine the scientific credibility of affected disciplines, as witnessed by the growing number of press articles reporting a “crisis of confidence” in the most visible of these disciplines <span class="citation">(Earp and Trafimow <a href="#ref-Earp2015">2015</a>)</span>.</p>
@@ -268,8 +272,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li><em>Example:</em> Excessive numbers of significant digits are difficult to process thus they go against the principle of clarity <span class="citation">(Ehrenberg <a href="#ref-Ehrenberg1977">1977</a>)</span>, in addition to giving a misleading impression of precision <span class="citation">(Taylor <a href="#ref-Taylor1997">1997</a>)</span>.</li>
 </ul>
 </div>
-<div id="principles_simplicity" class="section level3">
-<h3><span class="header-section-number">1.2.1</span> 6. Simplicity {-}</h3>
+<div id="principles_simplicity" class="section level3 unnumbered">
+<h3>6. Simplicity</h3>
 <p>When choosing between two data analysis procedures, the simplest procedure should ideally be preferred even if it is slightly inferior in other respects. A focus on simplicity follows from the principles of clarity and ease of processing, and it makes both researcher mistakes and reader misinterpretations less likely to occur. In other words, the KISS principle (Keep It Simple, Stupid) is as relevant in transparent statistics as in any other domain.</p>
 </div>
 <div id="non-contingency" class="section level3 unnumbered">
