--- a/index.html
+++ b/index.html
@@ -108,6 +108,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#using"><i class="fa fa-check"></i>Using</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#limitations"><i class="fa fa-check"></i>Limitations</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#versions"><i class="fa fa-check"></i>Versions</a></li>
+<li class="chapter" data-level="" data-path="index.html"><a href="index.html#citing"><i class="fa fa-check"></i>Citing</a></li>
 <li class="chapter" data-level="" data-path="index.html"><a href="index.html#contributing"><i class="fa fa-check"></i>Contributing</a></li>
 </ul></li>
 <li class="chapter" data-level="1" data-path="principles.html"><a href="principles.html"><i class="fa fa-check"></i><b>1</b> Transparent Statistics Guiding Principles</a><ul>
@@ -118,7 +119,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#resilience"><i class="fa fa-check"></i>3. Resilience</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#process-transparency"><i class="fa fa-check"></i>4. Process Transparency</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#clarity"><i class="fa fa-check"></i>5. Clarity</a></li>
-<li class="chapter" data-level="1.2.1" data-path="principles.html"><a href="principles.html#principles_simplicity"><i class="fa fa-check"></i><b>1.2.1</b> 6. Simplicity {-}</a></li>
+<li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#principles_simplicity"><i class="fa fa-check"></i>6. Simplicity</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#non-contingency"><i class="fa fa-check"></i>7. Non-contingency</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#precision-and-economy"><i class="fa fa-check"></i>8. Precision and economy</a></li>
 <li class="chapter" data-level="" data-path="principles.html"><a href="principles.html#material-availability"><i class="fa fa-check"></i>9. Material availability</a></li>
@@ -162,7 +163,7 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 </ul></li>
 </ul></li>
 <li class="chapter" data-level="3" data-path="pvalues.html"><a href="pvalues.html"><i class="fa fa-check"></i><b>3</b> p values</a></li>
-<li class="chapter" data-level="4" data-path="inferential.html"><a href="inferential.html"><i class="fa fa-check"></i><b>4</b> Inferential statistics</a></li>
+<li class="chapter" data-level="4" data-path="inference.html"><a href="inference.html"><i class="fa fa-check"></i><b>4</b> Inferential statistics</a></li>
 <li class="chapter" data-level="5" data-path="interpretations.html"><a href="interpretations.html"><i class="fa fa-check"></i><b>5</b> Interpretations and Conclusion</a></li>
 <li class="chapter" data-level="6" data-path="preregistration.html"><a href="preregistration.html"><i class="fa fa-check"></i><b>6</b> Preregistration and prespecification</a></li>
 <li class="chapter" data-level="7" data-path="multiplecomparisons.html"><a href="multiplecomparisons.html"><i class="fa fa-check"></i><b>7</b> Multiple comparisons</a></li>
@@ -206,8 +207,8 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <div id="preface" class="section level1 unnumbered">
 <h1>Preface</h1>
 <p><a href="https://github.com/transparentstats/guidelines"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_green_007200.png" alt="Fork me on GitHub"></a></p>
-<p><a href="https://doi.org/10.5281/zenodo.1228032"><img src="https://img.shields.io/badge/DOI%20current%20version-10.5281%2Fzenodo.1228032-green.svg" alt="DOI current version" /></a> <a href="https://doi.org/10.5281/zenodo.1186169"><img src="https://img.shields.io/badge/DOI%20all%20versions-10.5281%2Fzenodo.1186169-blue.svg" alt="DOI all versions" /></a></p>
 <p>This document grew out of a Special Interest Group and Workshop to develop guidelines for transparent statistical communication in Human-Computer Interaction research. The recommendations in this guideline are chosen to encourage transparency in the practice of statistics. For more details on this position, see our <a href="principles.html#principles">guiding principles</a>.</p>
+<p><a href="https://doi.org/10.5281/zenodo.2226616"><img src="https://img.shields.io/badge/this%20version-10.5281%2Fzenodo.2226616-green.svg" alt="DOI this version" /></a> <a href="https://doi.org/10.5281/zenodo.1186169"><img src="https://img.shields.io/badge/all%20versions-10.5281%2Fzenodo.1186169-blue.svg" alt="DOI all versions" /></a> <a href="index.html#citing"><img src="https://img.shields.io/badge/-cite%20or%20contribute-lightgrey.svg" alt="Citing or contribute" /></a></p>
 <div id="organization" class="section level2 unnumbered">
 <h2>Organization</h2>
 <p>This document is organized according to statistical topics. Each chapter splits into two sections: FAQ and Exemplars. The <strong>FAQ section</strong> lists questions that are relevant to transparency practice. We strive to allow random-access, to allow each reader to quickly find a compact answers to specific questions he/she has in mind. Thus, this guideline assumes some knowledge about the topic. We summarize such knowledge in earlier questions, but this is by no means exhaustive. Whenever you found yourself disoriented, it might be helpful to skim one or two earlier questions or lookup definitions of statistical terms over the internet. Whenever appropriate, we also point to other questions and parts of exemplars that are relevant.</p>
@@ -225,9 +226,23 @@ code > span.in { color: #60a0b0; font-weight: bold; font-style: italic; } /* Inf
 <h2>Versions</h2>
 <p>As the consensus in statistical practice evolves (as science evolves), this document is a living document. For the most up-to-date version of the guideline, visit <a href="https://transparentstats.github.io/guidelines/">the online guideline page</a> or <a href="https://github.com/transparentstats/guidelines">source on Github</a>.</p>
 </div>
+<div id="citing" class="section level2 unnumbered">
+<h2>Citing</h2>
+<p>You can cite this guideline with the following ACM reference format. If you wish to cite a specific version, replace the DOI with the version-specific DOI and the date of publication as stated at the top of this webpage.</p>
+<pre><code>Transparent Statistics in Human–Computer Interaction working group. 2019. Transparent Statistics Guidelines. (Jun 2019). DOI: http://dx.doi.org/10.5281/zenodo.1186169 (Available at https://transparentstats.github.io/guidelines)</code></pre>
+<p>Here’s the same thing in BibTeX format</p>
+<pre><code>@misc{TransparentStatsJun2019, 
+    title={{Transparent} {Statistics} {Guidelines}}, 
+    author={{Transparent} {Statistics} in {Human}–{Computer} {Interaction} {Working} {Group}}, 
+    DOI = {10.5281/zenodo.1186169},
+    month={Jun},
+    year={2019},
+    note={({Available} at https://transparentstats.github.io/guidelines)}
+}</code></pre>
+</div>
 <div id="contributing" class="section level2 unnumbered">
 <h2>Contributing</h2>
-<p>We welcome help and feedback at all levels! If you would like to contribute, please see <a href="https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines">Contributing to the Guidelines</a>.</p>
+<p>We welcome help and feedback at all levels! If you would like to contribute, please see <a href="https://github.com/transparentstats/guidelines/wiki/Contributing-to-the-Guidelines">Contributing to the Guidelines</a>. Especially, please have a look at the <a href="https://github.com/transparentstats/guidelines/wiki/Style-Guide">Style Guide</a> and a contributor <a href="https://github.com/transparentstats/guidelines/wiki/Code-of-Conduct">Code of Conduct</a>.</p>
 
 </div>
 </div>
